--- a/source/server/templates/index.html
+++ b/source/server/templates/index.html
@@ -1,7 +1,13 @@
 {% extends "base.html" %}
 
+{% load static %}
+
 {% block content %}
+  <section class="columns is-fullheight ">
+    Index - only show
+  </section>
+{% endblock %}
 
-Index - only show
-
+{% block js-script %}
+  <script src="{% static 'js/index.js' %}"></script>
 {% endblock %}
