menu and main page hero section

--- a/source/server/static/css/style.css
+++ b/source/server/static/css/style.css
@@ -1,221 +1,3 @@
-html {
-  height: 100%;
-}
-
-body {
-
-  height: 100%;
-}
-
-/**/
-.tooltip
-{ opacity: 0.8 !important; }
-
-/*
-Base Content
-*/
-.base-content {
-  padding: 0 0 0 0;
-  height: calc(100% - 56px);
-}
-
-.navbar {
-  height: 56px;
-}
-
-/*
-  Project_page
-*/
-
-.projects-base {
-  width: 100%;
-  height: 100%;
-  left: 0;
-  
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-box;
-  display: box; 
-}
-
-.projects-base .sidebar {
-  width: 230px;
-  height: 100%;
-  top: 0;
-  left: 0;
-  overflow-x: hidden;
-  overflow-y: auto;
+.is-main-color {
   background: #343a40;
-  color: #fff;
-}
-
-.projects-base .sidebar-header {
-  padding: 10px 15px 10px 30px;
-  font-size: 16px;
-  font-weight: bold;
-  background-color: #343a40;
-}
-
-.sidebar-nav {
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
-  position: relative;
-}
-
-.sidebar-nav li {
-  background-color: transparent;
-  position: relative;
-  display: inline-block;
-  width: 100%;
-  line-height: 20px;
-}
-
-.sidebar-nav li a {
-  padding: 10px 15px 10px 30px;
-  display: block;
-  color: #fff;
-  text-decoration: none;
-}
-
-.sidebar-nav li a.active,
-.sidebar-nav li a:hover,
-.sidebar-nav li a:focus {
-  border-left: 4px solid #3dd19b;
-  background-color: #4f5b69;
-  
-}
-
-.projects-base .sidebar hr {
-  width: 80%;
-  height: 2px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: #666666;
-  border: 0 none;
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-#project-content {
-  padding: 10px 10px 10px 10px;
-  width: calc(100% - 230px);
-  overflow-y: auto;
-}
-
-.doc-list {
-	width: 100%;
-	margin: 20px 0px 20px;
-}
-
-#project-page .progress {
-	margin: 20px 0px 20px;
-}
-
-#project-page .progress .progress-bar {
-	background: #3dd19b;
-}
-
-/*Pure CSS tab panel*/
-
-.tabset > input[type="radio"] {
-  position: absolute;
-  left: -200vw;
-}
-
-.tabset .tab-panel {
-  display: none;
-}
-
-.tabset > input:first-child:checked ~ .tab-panels > .tab-panel:first-child,
-.tabset > input:nth-child(3):checked ~ .tab-panels > .tab-panel:nth-child(2),
-.tabset > input:nth-child(5):checked ~ .tab-panels > .tab-panel:nth-child(3) {
-  display: block;
-}
-
-.tabset > label {
-  position: relative;
-  display: inline-block;
-  padding: 10px 10px 15px;
-  cursor: pointer;
-  font-weight: 600;
-}
-
-.tabset > label::after {
-  content: "";
-  position: absolute;
-  left: 15px;
-  bottom: 10px;
-  width: 22px;
-  height: 4px;
-  background: #8d8d8d;
-}
-
-.tabset > label:hover,
-.tabset > input:focus + label {
-  color: #3dd19b;
-}
-
-.tabset > label:hover::after,
-.tabset > input:focus + label::after,
-.tabset > input:checked + label::after {
-  background: #3dd19b;
-}
-
-.tabset > input:checked + label {
-  border-color: #ccc;
-  border-bottom: 1px solid #fff;
-  margin-bottom: -1px;
-}
-
-.tab-panel {
-  padding: 20px 0;
-  border-top: 1px solid #ccc;
-}
-
-
-/*
-  Annotation page
-*/
-
-.tl_anno_row {
-  text-indent: 30px;
-  line-height: 220%;
-}
-
-.lbl {
-	position: relative;
-	font-size: 14pt; 
-	height: 1.5em; 
-	padding-left: .5em; 
-	padding-right: 2em; 
-	border-radius: 10px;
-}
-
-.lbl .close {
-  position: absolute;
-  padding-left: 0.3em;
-}
-
-.label_tag {
-  display: inline;
-  /*justify-content: flex-start;*/
-  float: left;
-  margin: 0.2em;
-  font-weight: 700;
-  cursor: pointer;
-}
-
-.label_tag span:hover {
-  text-decoration: underline;
-}
-
-.icon {
-  display: inline-block;
-  width: 1em;
-  height: 1em;
-  stroke-width: 0;
-  stroke: currentColor;
-  fill: currentColor;
 }
