--- a/source/server/templates/index.html
+++ b/source/server/templates/index.html
@@ -3,9 +3,14 @@
 {% load static %}
 
 {% block content %}
-  <section class="columns is-fullheight ">
-    Index - only show
-  </section>
+<section class="hero is-medium is-main-color">
+	<div class="hero-body">
+		<div class="container">
+			<p class="is-size-3 has-text-white">Shanno - проект подготовки текста для работы с нейронными сетями</p>
+			<p class="is-size-5 has-text-white">Позволяет сделать разметку на сущности (NER), импортировать и экспортировать результаты работы в формате collnu plus</p>
+		</div>
+	</div>
+</section>
 {% endblock %}
 
 {% block js-script %}
