--- a/source/server/static/css/style.css
+++ b/source/server/static/css/style.css
@@ -1,3 +1,29 @@
 .is-main-color {
   background: #343a40;
 }
+
+.project-list {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
+	grid-gap: 2rem;
+}
+
+.project-list > article {
+  border: 1px solid #ccc;
+  box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
+}
+
+.project-list .project-card {
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  padding: 20px;
+}
+
+.project-list .project-card:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+a.box-link,
+a.box-link:hover {
+	color: inherit;
+}
