--- a/source/server/static/css/style.css
+++ b/source/server/static/css/style.css
@@ -28,10 +28,6 @@ a.box-link:hover {
 	color: inherit;
 }
 
-aside {
-  background: #343a40;
-}
-
 .fh-section {
   min-height: calc(100vh - ( 3.25rem - .75rem ) );
   max-height: calc(100vh - ( 3.25rem - .75rem ) );
@@ -57,7 +53,7 @@ aside {
 
 .menu-list li a:hover,
 .menu-list li a:focus {
-  border-left: 4px solid #3dd19b;
+  border-left: 6px solid #18b193;
   background-color: #4f5b69; 
 }
 
