small hero image

--- a/source/server/templates/index.html
+++ b/source/server/templates/index.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block content %}
-<section class="hero is-medium is-main-color">
+<section class="hero is-main-color">
 	<div class="hero-body">
 		<div class="container">
 			<p class="is-size-3 has-text-white">Shanno - проект подготовки текста для работы с нейронными сетями</p>
