project left position

--- a/source/server/templates/index.html
+++ b/source/server/templates/index.html
@@ -13,7 +13,7 @@
 </section>
 
 <section id="main-project-page" class="section">
-	<p class="title is-2 has-text-centered">Проекты</p>
+	<p class="title is-2">Проекты</p>
 	<div class="project-list">
 		<a 
 		:href="'/projects/' + project.id + '/'" 
