add button create project

--- a/source/server/templates/index.html
+++ b/source/server/templates/index.html
@@ -13,7 +13,18 @@
 </section>
 
 <section id="main-project-page" class="section">
-	<p class="title is-2">Проекты</p>
+	<nav class="level">
+		<div class="level-left">
+			<div class="level-item">
+				<p class="title is-2">Проекты</p>
+			</div>
+		</div>
+		<div class="level-right">
+			<div class="level-item">
+				<button class="button is-link">Создать проект</button>
+			</div>
+		</div>
+	</nav>
 	<div class="project-list">
 		<a 
 		:href="'/projects/' + project.id + '/'" 
