--- a/source/server/templates/base.html
+++ b/source/server/templates/base.html
@@ -31,7 +31,7 @@
   <!-- Menu -->
   <b-navbar id="menu" class="is-main-color">
     <template slot="brand">
-      <b-navbar-item href="/">
+      <b-navbar-item href="/" class="box-link">
         <span class="is-size-5">Shanno</span>
       </b-navbar-item>
     </template>
