one column project list

--- a/source/server/templates/index.html
+++ b/source/server/templates/index.html
@@ -16,7 +16,7 @@
 	<nav class="level">
 		<div class="level-left">
 			<div class="level-item">
-				<p class="title is-2">Проекты</p>
+				<p class="title is-3">Проекты</p>
 			</div>
 		</div>
 		<div class="level-right">
@@ -32,8 +32,8 @@
 		v-for="project in projects" 
 		class="box-link">
 		<article class="project-card">
-			<p class="title">${project.name}</p>
-			<p class="subtitle">${project.description}</p>
+			<p class="title is-4">${project.name}</p>
+			<p class="subtitle is-6">${project.description}</p>
 		</article>
 	</a>
 </div>
