--- a/source/server/static/css/style.css
+++ b/source/server/static/css/style.css
@@ -5,8 +5,9 @@
 
 .project-list {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
-	grid-gap: 2rem;
+	/*grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));*/
+	grid-template-rows: 1fr;
+	grid-gap: 1rem;
 }
 
 .project-list > article {
@@ -15,14 +16,14 @@
 }
 
 .project-list .project-card {
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 2px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-  padding: 20px;
+  padding: 10px;
 }
 
-.project-list .project-card:hover {
+/*.project-list .project-card:hover {
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-}
+}*/
 
 a.box-link,
 a.box-link:hover {
