--- a/source/server/annotation/templates/project_import.html
+++ b/source/server/annotation/templates/project_import.html
@@ -6,7 +6,62 @@
 
 {% block project-content %}
 
-<div id="project-import" class="card">
+<div id="project-import">
+  <div class="column">
+    <h5 class="title is-5">Выберите тип файла для загрузки</h5>
+  </div>
+  <div class="column">
+    <b-tabs v-model="activeTab">
+      <b-tab-item label="CoNLL-U Plus">
+        <p>
+          Является расширением формата CoNLL-U. Может иметь любое количество столбцов.
+          <a href="https://universaldependencies.org/ext-format.html">Формат.</a>
+          Должен быть в кодировке UTF-8.
+        </p>
+        <p>Пример:</p>
+        <pre class="has-background-dark has-text-white">  
+# global.columns = FORM NE
+
+This  _
+is  VERB
+only  _
+example _ 
+        </pre>
+      </b-tab-item>
+      <b-tab-item label="Другой формат">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Harum nihil deleniti labore eos ratione, omnis nam fuga dignissimos
+          architecto eum temporibus voluptate molestiae iusto ipsam,
+          quisquam rem hic mollitia earum.
+        </p>
+      </b-tab-item>
+    </b-tabs>
+    <div class="column">
+      <b-field grouped>
+        <p class="control">
+          <button 
+          class="button is-link"
+          @click="uploadFiles({{project.id}})">
+          Загрузить
+        </button>
+      </p>
+      <b-upload v-model="files">
+      </b-upload>
+    </b-field>
+  </div>
+  <b-notification
+    :type="st_variant"
+    aria-close-label="Close notification"
+    role="alert"
+    :active.sync="st_show"
+    v-show="st_show">
+    ${ st_value }
+  </b-notification>
+  </div>
+</div>
+
+<!-- <div id="project-import" class="card">
 
   <div>
     <b-alert dismissible :variant="st_variant" :show="st_show" @dismissed="st_show=false">${st_value}</b-alert>
@@ -78,7 +133,7 @@ example	_
     </form>
 
   </div>
-</div>
+</div> -->
 
 {% endblock %}
 
