--- a/source/server/annotation/templates/project_import.html
+++ b/source/server/annotation/templates/project_import.html
@@ -11,7 +11,7 @@
     <h5 class="title is-5">Выберите тип файла для загрузки</h5>
   </div>
   <div class="column">
-    <b-tabs v-model="activeTab">
+    <b-tabs v-model="selected">
       <b-tab-item label="CoNLL-U Plus">
         <p>
           Является расширением формата CoNLL-U. Может иметь любое количество столбцов.
