--- a/source/server/annotation/templates/project_export.html
+++ b/source/server/annotation/templates/project_export.html
@@ -6,7 +6,49 @@
 
 {% block project-content %}
 
-<div class="card" id="project-export">
+<div id="project-export">
+  <div class="column">
+    <h5 class="title is-5">Выберите тип файла для загрузки</h5>
+  </div>
+  <div class="column">
+    <b-tabs v-model="selected">
+      <b-tab-item label="CoNLL-U Plus">
+        <p>
+          Является расширением формата CoNLL-U. Может иметь любое количество столбцов.
+          <a href="https://universaldependencies.org/ext-format.html">Формат.</a>
+          Должен быть в кодировке UTF-8.
+        </p>
+      </b-tab-item>
+      <b-tab-item label="Другой формат">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Harum nihil deleniti labore eos ratione, omnis nam fuga dignissimos
+          architecto eum temporibus voluptate molestiae iusto ipsam,
+          quisquam rem hic mollitia earum.
+        </p>
+      </b-tab-item>
+    </b-tabs>
+  </div>
+    <div class="column">
+          <button 
+          class="button is-link"
+          v-bind:class="{ 'is-loading': is_process }"
+          @click="download({{project.id}})">
+          Скачать
+        </button>
+  </div>
+  <b-notification
+    :type="st_variant"
+    aria-close-label="Close notification"
+    role="alert"
+    :active.sync="st_show"
+    v-show="st_show">
+    ${ st_value }
+  </b-notification>
+  </div>
+</div>
+
+<!-- <div class="card" id="project-export">
 
   <div>
     <b-alert dismissible :variant="st_variant" :show="st_show" @dismissed="st_show=false">${st_value}</b-alert>
@@ -56,7 +98,7 @@
       </div>
 		</form>
   </div>
-</div>
+</div> -->
 
 {% endblock %}
 
