--- a/source/server/templates/base.html
+++ b/source/server/templates/base.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
   <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/bulma-tag.css' %}"> -->
   <link rel="stylesheet" type="text/css" href="{% static 'css/awfont.min.css' %}">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
 
   {% if DEBUG %}
     <script src="{% static 'js/ex/vue.js' %}"></script>
