--- a/source/server/templates/index.html
+++ b/source/server/templates/index.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="level-right">
 			<div class="level-item">
-				<button class="button is-link">Создать проект</button>
+				<a class="button is-link" href="/project_create/">Создать проект</a>
 			</div>
 		</div>
 	</nav>
